--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "natours",
   "version": "1.0.0",
   "description": "Natoours",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile:sass":"node-sass ./sass/main.scss ./css/style.css -w"
   },
   "repository": {
     "type": "git",
